tooling/nargo_cli/tests/snapshots/execute__tests__databus_in_fn_with_empty_arr_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9510194258692017816",
  "abi": {
    "parameters": [
      {
        "name": "_empty",
        "type": {
          "kind": "array",
          "length": 0,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      },
      {
        "name": "value_1",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "value_2",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "databus"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/61SQQoCMQxsu+IPPHjzCUnTbtObHnyIxe7dV/kX3+FDXDGHUFxY2A6ECZMQhiHW/ODm2ktv5xqEvzg1mhVNwwmfhWEbUN8iGEOoyVckvIHPhSOEWEZGxsjx7pmocuCUS06QMVDFKWaa5Jjr6Evn4FbksNW77ei9Yw6gf8H86XdNHkbNzYI2CB/el+Pj9by2ux+CDwjRrAIAAA==",
  "debug_symbols": "lY7LCsIwEEX/ZdZZVFNB8ysiJY9JGQhJyEOQ0H83LRbqRnB57j1zmQYGVZ0n8jZkEPcGLmhZKPhODc5blKP0K+UiUwFx5QzQGxC3cWFgySGIy7A8GPD/9PGnfhr4l99BJXKO5un4Y4+fMpFUDj9oq9eHtrzi3uz3MQWNpiZcl7auz78B",
  "file_map": {
    "50": {
      "source": "fn main(_empty: [u32; 0], value_1: u32, value_2: call_data(0) u32) {\n    assert_eq(value_1 + 1, value_2);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/databus_in_fn_with_empty_arr/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
