tooling/nargo_cli/tests/snapshots/execute__tests__databus_two_calldata_simple_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "17182825642253591879",
  "abi": {
    "parameters": [
      {
        "name": "idx",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "databus"
      },
      {
        "name": "z",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "databus"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 32
      },
      "visibility": "databus"
    },
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "16761564377371454734": {
        "error_kind": "string",
        "string": "Array index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/91YS07DMBB1EiclRQgE10AipglpF0gsCv2xAQmJbejnHDk6sfCQ10kiVGoXlZEsO5nn+bwZu0o98SW9anhmLc0ciKYQ5sHMyX6iLNpKdGy+43g9i/G6itG3zKl0zGlwBJzKI4gxPIIYI8u9SdJrLEzw+jDoBtMF1ARFTN+2R8u7mWMz+6C32LAqZn5t2h8m6TIW22I5/kFsbEo39nOyH7qxn1Dtx2VtH3MhvwHD8T0BYB4B89iBeQLMUwdmAphJB2YKmGkHZgaYWQdmDpg5w5yZNR64scFQfVycj6p/M8f1v6Xc8EeO8iTfkRvfA4/5E6KuB+rIf184PWvKY/4oHs4P1fqMMGUdD9fJspkH6ULQUX1PqnENON5bFEcM+dvmouo71/dO+od9l/3HvguYTpbNPHbtO+REAi6H9ZDZXpT1Hl5PR3fkh8uzoOtz1RG/gBx7pfgW0gXwjjgnnk4Qz3Qx6GS57advniX4QVsUR8jwd+b53MwR7KH9Fy3+I+Z/K+6Wd8gRtxW0vCO87tEbsz41Q/fXM+0Rbn8H+RkMRX0G8U4IQY/4e+KiGq+Axz0CbOKHus/wbfdAyDBazkXzXooOw1e6L1/jHfkKLPLlt/DlMSzaQn65b4or6sB7LH/CL0Sd/5tZ656n7xVZ1jZs1S0f1h+NdOeEov2PLgl6xL+Y5z7kKCDvh1/GuckLtRkUmyIrVqt0WVwy+1p84Mm2//VwtEpGm3WhlLpdJetD+0+zIl8WuVKjVK1Tlf3k/xN3H8SmuRQAAA==",
  "debug_symbols": "ldPdCoMgFAfwdznXXmhqWq8yxrCyIYiF1WBE7z4d+6J1c27EI/7wcOS/Qmeb5XpxoR8mqE8r+KE1sxtCqtaNQBOd9+56+T0Gmhepnven0YRcTrOJM9SMKgI2dGnHePK98xZqSbczAanRosKKkqIFQ4sCLThaiENRfAT/ExItSrRQaKHRosIKRdHi+M959RZC7EWBFhwtBE5sqbqZ6Ezj7Suu/RLan/TO99HugjzGobXdEm2O9DfNuVkhiBSpD5bnqUqiWS7yqLQkWqX30psP",
  "file_map": {
    "50": {
      "source": "fn main(mut idx: u32, y: call_data(0) [u32; 2], z: call_data(1) [u32; 4]) -> return_data u32 {\n    let a = y[idx];\n    let b = z[idx];\n    a + b\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/databus_two_calldata_simple/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
