tooling/nargo_cli/tests/snapshots/execute__tests__derive_force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "13528395179577221003",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/82YzW6bQBDH1zZgg03sOI1POVXqra2wsYN98yHfHw9BQyz1UlVVHwD10j52jbqDh8mgJmJGYiS0wP73N8Mwu17TMQfr2NaxbdfU29a2UTObFz59VR9JrMM93ylxMyXuSim/S6V410rcjRL3WYmbmLcYTOI/toXJ1UX9PSM3gX3iV5K/jpbPPvN8gvHHPmIq8FPgOzr8qG85F3mVb4jfHtHRMVhziTSXSIPZV0hzVaO5RprrGs0N0tzUaG6R5rZGc4c0dzWae6S5r9E8IM1DjeYRaR6JJkTnYBdWA7WgMRf3c2WlXGubkOTBoOcE366O77RD/BlTrXND/AdGdV7PO8QfxEPzA+86BE1+iIf2OfnL54A+F/XB+x3sj/dIx9UW6D6h88/2HN6Z5tqtVe+FnTDxY1+F9XNTGuSjh+5BXiHPA6wnfT7qc/Kqn8BeO8gPZkEcLtF/tNdj23poDIyfMP494r8SN3OP5sVn9D6j9/bHB3s+tEdRQ79gjHk5z4pja6+jRpZ84dY0Of5iwa1bcvzzMn5Ph78Bfl+HX87hgQ5/CXxfhR+X+69Apz7L/eNQh1/mZ6TDL+s/1Hm/CfCPVPiLJ+CPdeIv+RMdfrlnO9bhr4E/VeHH5fpzolOfGexr3pmD0T3nKbovt7+YZ6/dc4L/gMSqtec8JfHQ/OB9ZdE3Y2KdMH30N3zG+JkxfjiWI8hyBVmeIKsvyBoIsiRz77c0rkCQNRRkjQRZba3VUJAlWRNHLY1rLMiaCLLaWhOS8/FYkNXWdXUqyIJ9HPe/vrCtbaOGBrE6TKxdJlbQc9/buL3PCGm///j67achhh0DHJ87KBFcAGdkfK+GS/n42v9P/xnDGqJxTl71v7X3owaWrP+9nMLgA5hrqh81DfHvEv1ve41/pKF1GsS5S9L5Lk536SrNsuVTOiX8wrooT38BolEY294eAAA=",
  "debug_symbols": "ldjRasIwFIDhd8l1L3rSJCfxVcaQqlUKpZVaB6P03ZeKbjDd4L/z2Py2+EEvzmwOze562rb9cbiYzdtsumFfT+3Q52k25e2ry7nu1+ky1eNkNmKTLUzTH/LHqnRLYY5t15iNL5fi6bBL4X7WS/j/aExyP5ps9X3U2uU9D7ux7br2tP39eLNx+uoh//6xwriIi0QLX+JCcGFxUeHC4cLjIuACm3ts7rF5wOYBmwdsHrB5wOYBmwdsHrB5wOYBmys2V2yu2FyxuWJzxeaKzRWbKzZXbB6xecTmEZtHbB6xecTmEZtHbB6xecTmCZsnbJ6wecLmCZsnbJ6wecLmCZsnbC5lyRPhieVJxRPHE8+TwBPlSeQJ1xeuL1xfuL5wfeH6wvWF6wvXF64vXN9yfcv1Lde3XN9yfftSX53eE43lUxJ4ojyJLFny9FGPbb3rmnVpsF689vvHDiGP0+f5ceWxZTiPw745XMdm3Tf8rBrWf75yhXO3N0oe8v6jkMrnm+QbfQE=",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "use std::hash::{Hash, Hasher};\n\n#[derive_via(derive_do_nothing)]\ntrait DoNothing {\n    fn do_nothing(self);\n}\n\n#[derive(DoNothing)]\nstruct MyStruct {\n    my_field: u32,\n}\n\ncomptime fn derive_do_nothing(s: TypeDefinition) -> Quoted {\n    let typ = s.as_type();\n    let generics = s.generics().map(|g| quote { $g }).join(quote {,});\n    quote {\n        impl<$generics> DoNothing for $typ {\n            fn do_nothing(_self: Self) {\n                // Traits can't tell us what to do\n                println(\"something\");\n            }\n        }\n    }\n}\n\n// Test stdlib derive fns & multiple traits\n// - We can derive Ord and Hash even though std::cmp::Ordering and std::hash::Hasher aren't imported\n// - We need to define MyOtherOtherStruct first since MyOtherStruct references it as a field and\n//   attributes are run in reading order. If it were defined afterward, the derived Eq impl for MyOtherStruct\n//   would error that MyOtherOtherStruct doesn't (yet) implement Eq.\n#[derive(Eq, Default, Hash, Ord)]\nstruct MyOtherOtherStruct<T> {\n    x: T,\n}\n\n#[derive(Eq, Default, Hash, Ord)]\nstruct MyOtherStruct<A, B> {\n    field1: A,\n    field2: B,\n    field3: MyOtherOtherStruct<B>,\n}\n\n#[derive(Eq, Default, Hash, Ord)]\nstruct EmptyStruct {}\n\nfn main() {\n    let s = MyStruct { my_field: 1 };\n    s.do_nothing();\n\n    let o: MyOtherStruct<Field, u32> = MyOtherStruct::default();\n    assert_eq(o, o);\n\n    let o: MyOtherStruct<u8, [str<2>]> = MyOtherStruct::default();\n    assert_eq(o, o);\n\n    // Field & str<2> above don't implement Ord\n    let o1 = MyOtherStruct {\n        field1: 12 as u32,\n        field2: 24 as i8,\n        field3: MyOtherOtherStruct { x: 54 as i8 },\n    };\n    let o2 = MyOtherStruct {\n        field1: 12 as u32,\n        field2: 24 as i8,\n        field3: MyOtherOtherStruct { x: 55 as i8 },\n    };\n    assert(o1 < o2);\n\n    let mut hasher = TestHasher { result: 0 };\n    o1.hash(&mut hasher);\n    assert_eq(hasher.finish(), 12 + 24 + 54);\n\n    let empty = EmptyStruct {};\n    assert_eq(empty, empty);\n}\n\nstruct TestHasher {\n    result: Field,\n}\n\nimpl std::hash::Hasher for TestHasher {\n    fn finish(self) -> Field {\n        self.result\n    }\n\n    fn write(&mut self, input: Field) {\n        self.result += input;\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/derive/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "print_unconstrained"
  ]
}
